# orion-o6-drivers

./: .gitignore  README.md  dl-linux.sh
acpi/: acpi_summary.txt  apic.dsl  csrt.dsl  dbg2.dsl  dsdt.dsl  facp.dsl  gtdt.dsl  iort.dsl  mcfg.dsl  sdei.dsl  ssdt1.dsl  ssdt2.dsl
build-scripts/: .env.cix  build-all.sh  build-cix-common-misc.sh  build-cix-env.sh  build-csidma-driver.sh  build-debian.sh  build-ffmpeg.sh  build-firmware-radxa-O6.sh  build-gpu-driver.sh  build-gstreamer.sh  build-isp-driver-v4l2.sh  build-isp-driver.sh  build-kernel.sh  build-npu-driver.sh  build-prideb.sh  build-storage.sh  build-tool.sh  build-vpu_driver.sh  build-vpu_test.sh  check_dep.sh  debug_switch.sh  envtool.sh  framework.sh  grub-post-silicon.cfg  grub.cfg  parse_params.sh  submodule_mirror.sh
build-scripts/changelogs/: changelog.ai-demo-manager  changelog.audio-chat-gradio  changelog.chatbot  changelog.chatbot-gradio  changelog.cix-audio-dsp  changelog.cix-audio-sof  changelog.cix-bkup  changelog.cix-bt-driver  changelog.cix-common-misc  changelog.cix-cpipe  changelog.cix-csidma-driver  changelog.cix-debian-misc  changelog.cix-deepin-adapter  changelog.cix-dpu-ddk  changelog.cix-edge-slm  changelog.cix-env  changelog.cix-firmware  changelog.cix-gpu-driver  changelog.cix-gpu-test  changelog.cix-gpu-umd  changelog.cix-grubcfg  changelog.cix-gstreamer  changelog.cix-hdcp2  changelog.cix-isp-driver  changelog.cix-isp-driver-v4l2  changelog.cix-isp-umd  changelog.cix-libdrm  changelog.cix-libglvnd  changelog.cix-llama-cpp  changelog.cix-ltp  changelog.cix-mesa  changelog.cix-mnn  changelog.cix-noe-umd  changelog.cix-npu-driver  changelog.cix-npu-onnxruntime  changelog.cix-npu-umd  changelog.cix-opencv  changelog.cix-openkylin-adapter  changelog.cix-openkylin-beta2  changelog.cix-openssl  (+31 more)
cix_opensource/chromium/chromium-cix/: README.md
cix_opensource/cix_unit_test/cix_llamacpp_test/: llamacpp_bench.sh  llamacpp_sanity.sh
cix_opensource/cix_unit_test/cix_npu_onnxruntime_py_test/: README.md  run_model.py
cix_opensource/cix_unit_test/cix_npu_py_test/: noe_profiler.py  noe_sanity.py
cix_opensource/cix_unit_test/cix_vpu_test/: Android.bp  Makefile  clean.sh  sconstruct
cix_opensource/ffmpeg/debian/: changelog  control  rules
cix_opensource/ffmpeg/libavcodec/: Makefile  allcodecs.c  v4l2_buffers.c  v4l2_context.c  v4l2_context.h  (+4 more)
cix_opensource/gstreamer/: .gitignore  meson.build  meson_options.txt
cix_opensource/gstreamer/subprojects/gst-plugins-cix/: meson.build
cix_opensource/gstreamer/subprojects/gst-plugins-cix/libs/: audio_dsp_if.c  audio_dsp_if.h  meson.build
cix_opensource/gstreamer/subprojects/gst-plugins-cix/plugins/: meson.build
cix_opensource/gstreamer/subprojects/gst-plugins-cix/plugins/afbcparse/: gstafbcparse.c  gstafbcparse.h  meson.build
cix_opensource/gstreamer/subprojects/gst-plugins-cix/plugins/heaacv2/: cix_heaacv2_enc.c  cix_heaacv2_enc.h  meson.build
cix_opensource/gstreamer/subprojects/gst-plugins-cix/plugins/mp3/: cix_mp3_dec.c  cix_mp3_dec.h  meson.build
cix_opensource/gstreamer/subprojects/gst-plugins-cix/plugins/sr/: gstcixsr.c  gstcixsr.h  meson.build
cix_opensource/gstreamer/subprojects/gst-plugins-cix/tests/examples/: meson.build
cix_opensource/gstreamer/subprojects/gst-plugins-cix/tests/examples/v4l2/: meson.build  v4l2enc-dynamic.c
linux/: Makefile
linux/debian.master/: changelog  control.stub.in  copyright
linux/drivers/: Makefile
linux/fs/: eventfd.c  eventpoll.c  pipe.c
linux/init/: Kconfig  main.c  version.c
linux/kernel/: exit.c  hung_task.c  notifier.c  softirq.c  tracepoint.c  workqueue.c
linux/lib/: nmi_backtrace.c
linux/mm/: percpu.c  slab_common.c  vmalloc.c
linux/net/: socket.c
linux/scripts/: checkpatch.pl  headers_install.sh
(+631 files in other folders)
